--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@ngrx/store": "^10.1.2",
     "@ngrx/store-devtools": "^10.1.2",
     "ngx-spinner": "^10.0.1",
+    "ngx-summernote": "^0.8.0",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
+    "summernote": "^0.8.18",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
